Small notes and changes to the algorithms

--- a/gilyenAlgo.ipynb
+++ b/gilyenAlgo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Attempting to implement Gilyen, et al's algorithm which is a modified version of Jordan's algorithm:\n",
     "\n",
-    "- \"Optimizing quantum optimization algorithms via faster quantum gradient computation\": https://arxiv.org/abs/1711.00465"
+    "### \"Optimizing quantum optimization algorithms via faster quantum gradient computation\": https://arxiv.org/abs/1711.00465"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We will apply the following algorithm below\n",
+    "#### We will apply the combined algorithm below\n",
     "![Continuation of Algorithm](./pics/improvedAlgo.png)"
    ]
   },
@@ -224,7 +224,10 @@
     "\n",
     "![](./pics/O_S_g.png)\n",
     "\n",
-    "Thus $O^S_{g_{(2m)}}$ can be implemented using $O(\\frac{log(m)}{\\epsilon r} + m)$ (fractional) queries to $O_f$. By choosing $m = log(c\\sqrt{d}/\\epsilon)$ the query complexity acheives, up to logarithmic factors the desired $1/\\epsilon$ scaling in the precision paramter and also the $\\sqrt{d}$ scaling with the dimension. This improves the results for Jordan's algorithm both quantitatively and qualitatively."
+    "Thus $O^S_{g_{(2m)}}$ can be implemented using $O(\\frac{log(m)}{\\epsilon r} + m)$ (fractional) queries to $O_f$. By choosing $m = log(c\\sqrt{d}/\\epsilon)$ the query complexity acheives, up to logarithmic factors the desired $1/\\epsilon$ scaling in the precision paramter and also the $\\sqrt{d}$ scaling with the dimension. This improves the results for Jordan's algorithm both quantitatively and qualitatively.\n",
+    "\n",
+    "\n",
+    "## Conclusion: following these restrictions we can yield speedups for Jordan's algorithm"
    ]
   },
   {
